--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,12 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>André Martins</title>
-  <link rel="stylesheet" href="assets/bundle.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-  <div id="root"></div>
-  <script src="assets/bundle.js"></script>
+  <%- include("./components/header") %> 
+  <%- include("./components/main") %> 
 </body>
 </html>
