--- a/src/components/header.ejs
+++ b/src/components/header.ejs
@@ -5,6 +5,10 @@
     </a>
   </div>
   <nav id="navbar">
+    <input type="checkbox" name="menu-toggle" id="menu-toggle">
+    <label id="menu-container" for="menu-toggle">
+      <div id="menu-icon"></div>
+    </label>
     <ul id="navbar-ul">
       <li>
         <a href="/">Home</a>
