Adding greeting and favicon

--- a/src/components/header.ejs
+++ b/src/components/header.ejs
@@ -1,7 +1,7 @@
 <header id="page-header">
   <div>
     <a href="/">
-      <img id="page-logo" src="../assets/emblem-light.svg" />
+      <img id="page-logo" src="../public/emblem-light.svg" />
     </a>
   </div>
   <nav id="navbar">
