--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,12 @@
 $header-height: 3rem;
 
-$primary-color: #172A3A;
-$dark-color: #0F0F0F;
+$primary-color: #0268bb;
+
+
+
+$neutral-color-5: #0F0F0F;
+$neutral-color-4: #3F3F3F;
+$neutral-color-3: #6F6F6F;
+$neutral-color-2: #9F9F9F;
+$neutral-color-1: #CFCFCF;
 
