--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,4 +25,5 @@ a:active {
   color: inherit;
 }
 
-@import "components/Header.scss";
+@import "components/header.scss";
+@import "components/greeting.scss"
