Renaming header to page-header

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
-    <%- include("./components/header") %>
+    <%- include("./components/page-header") %>
     <main>
       <%- include("./components/greeting") %>
     </main>
