--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,5 +25,5 @@ a:active {
   color: inherit;
 }
 
-@import "components/header.scss";
+@import "components/page-header.scss";
 @import "components/greeting.scss"
