--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -8,12 +8,12 @@
   flex-direction: column;
 }
 
-@mixin menu-bars {
+@mixin menu-bars($mt: 0.3rem) {
   display: block;
   position: absolute;
   width: 2rem;
   height: 0.25rem;
-  background-color: #ffffff;
-  margin: 0.3rem 0;
+  background-color: $text-color-1;
+  margin: $mt 0 0.3rem;
   transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
 }
