--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,21 +9,7 @@ html {
   font-size: 20px;
 }
 
-a:link {
-  color: inherit;
-}
+@import "elements/a";
 
-a:visited {
-  color: inherit;
-}
-
-a:hover {
-  color: inherit;
-}
-
-a:active {
-  color: inherit;
-}
-
-@import "components/page-header.scss";
-@import "components/greeting.scss"
+@import "components/page-header";
+@import "components/greeting";
