Addition typing effect

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,14 +1,14 @@
 $header-height: 3rem;
 
-$primary-color: #0268bb;
+$header-bg-color: #0268bb;
 
-$text-color-1: #ffffff;
+$primary-color: #ffffff;
 
-$fontf-1: 'IBM Plex Mono', monospace;
+$font-1: 'IBM Plex Mono', monospace;
 
-$neutral-5: #0F0F0F;
-$neutral-4: #3F3F3F;
-$neutral-3: #6F6F6F;
-$neutral-2: #9F9F9F;
-$neutral-1: #CFCFCF;
+$neutral-color-5: #0F0F0F;
+$neutral-color-4: #3F3F3F;
+$neutral-color-3: #6F6F6F;
+$neutral-color-2: #9F9F9F;
+$neutral-color-1: #CFCFCF;
 
