--- a/src/components/greeting.ejs
+++ b/src/components/greeting.ejs
@@ -1,5 +1,5 @@
 <div class="container" id="greeting-container">
   <div id="greeting">
-    <h1>Coming soon...</h1>
+    <h1><span id="whoiam">I'm André Martins</span><span id="text-cursor" class="blinker-effect">|</span></h1>
   </div>
 </div>
