--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -13,7 +13,7 @@
   position: absolute;
   width: 2rem;
   height: 0.25rem;
-  background-color: $text-color-1;
+  background-color: $primary-color;
   margin: $mt 0 0.3rem;
   transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
 }
