Update greeting.ejs and greeeting.scss

--- a/src/components/greeting.ejs
+++ b/src/components/greeting.ejs
@@ -1,5 +1,9 @@
-<div class="container" id="greeting-container">
-  <div id="greeting">
-    <h1><span id="whoiam">I'm André Martins</span><span id="text-cursor" class="blinker-effect">|</span></h1>
-  </div>
+<div class="container" id="greeting">
+  <section id="greeting-section">
+    <div id="greeting-section-text">
+      <h1><span id="whoiam">I'm André Martins</span><i id="text-cursor" class="blinker-effect"></i></h1>
+      <p>I'm a web developer and computing engineering student...</p>
+    </div>
+    <img src="../public/programmer.png" alt="Programmer figure" id="greeting-section-fig">
+  </section>
 </div>
