--- a/src/components/page-header.ejs
+++ b/src/components/page-header.ejs
@@ -1,6 +1,6 @@
 <header id="page-header">
   <div>
-    <a href="/">
+    <a href="#greeting">
       <img id="page-logo" src="../public/emblem-light.svg" />
     </a>
   </div>
@@ -11,13 +11,16 @@
     </label>
     <ul id="navbar-ul">
       <li>
-        <a href="/">Home</a>
+        <a href="#greeting">Home</a>
       </li>
       <li>
-        <a href="/#about">About</a>
+        <a href="#about">About</a>
       </li>
       <li>
-        <a href="/#contact">Contact</a>
+        <a href="#projects">Projects</a>
+      </li>
+      <li>
+        <a href="#contact">Contact</a>
       </li>
     </ul>
   </nav>
