--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,7 +2,7 @@ $header-height: 3rem;
 
 $header-bg-color: #0268bb;
 
-$primary-color: #ffffff;
+$primary-color: #ffffee;
 
 $font-1: 'IBM Plex Mono', monospace;
 
