--- a/src/sass/elements/a.scss
+++ b/src/sass/elements/a.scss
@@ -1,15 +1,8 @@
-a:link {
-  color: inherit;
-}
-
-a:visited {
-  color: inherit;
-}
-
-a:hover {
-  color: inherit;
-}
-
-a:active {
-  color: inherit;
+a {
+  &:link,
+  &:visited,
+  &:hover,
+  &:active {
+    color: inherit;
+  }
 }
