Addition about section

--- a/src/components/page-header.ejs
+++ b/src/components/page-header.ejs
@@ -1,15 +1,15 @@
 <header id="page-header">
   <div>
     <a href="#greeting">
-      <img id="page-logo" src="../public/emblem-light.svg" />
+      <img id="page-header-logo" src="../public/emblem-light.svg" />
     </a>
   </div>
-  <nav id="navbar">
-    <input type="checkbox" name="menu-toggle" id="menu-toggle">
-    <label id="menu-container" for="menu-toggle">
-      <div id="menu-icon"></div>
+  <nav id="page-header-navbar">
+    <input id="page-header-navbar-toggle" type="checkbox" name="menu-toggle">
+    <label id="page-header-navbar-menu" for="page-header-navbar-toggle">
+      <div id="page-header-navbar-menu-icon"></div>
     </label>
-    <ul id="navbar-ul">
+    <ul id="page-header-navbar-ul">
       <li>
         <a href="#greeting">Home</a>
       </li>
