--- a/src/components/greeting.ejs
+++ b/src/components/greeting.ejs
@@ -1,9 +1,10 @@
-<div class="container" id="greeting">
-  <section id="greeting-section">
-    <div id="greeting-section-text">
-      <h1><span id="whoiam">I'm André Martins</span><i id="text-cursor" class="blinker-effect"></i></h1>
+<div class="container-fluid" id="greeting">
+  <section id="greeting-content">
+    <div id="greeting-content-text">
+      <h1 id="greeting-content-text-heading"><span id="whoiam">I'm André Martins</span><i id="text-cursor"
+          class="blinker-effect"></i></h1>
       <p>I'm a web developer and computing engineering student...</p>
     </div>
-    <img src="../public/programmer.png" alt="Programmer figure" id="greeting-section-fig">
+    <img src="../public/programmer.png" alt="Programmer figure" id="greeting-content-fig">
   </section>
 </div>
