--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -17,3 +17,12 @@
   margin: $mt 0 0.3rem;
   transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
 }
+
+@mixin showSkill($name) {
+  #radio-#{$name}:checked ~ .skills-labels [for="radio-#{$name}"] {
+    color: $primary-color;
+  }
+  #radio-#{$name}:checked ~ .skills-text #text-#{$name} {
+    display: flex;
+  }
+}
