--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,7 +11,7 @@ html, body {
   font-size: 20px;
   font-family: $font-1;
   color: $primary-color;
-  background-color: $neutral-color-6;
+  background-color: $bg-color-1;
 }
 
 @import "elements/a";
