--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,19 +1,24 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400&family=Roboto:wght@300;400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Roboto:wght@300&display=swap');
 
 $header-height: 3rem;
 
 $greeting-height: calc(100vh - $header-height);
 
-$header-bg-color: #0268bb;
+$neutral-color-0: #efefef;
+$neutral-color-1: #c9c9c9;
+$neutral-color-2: #a4a4a4;
+$neutral-color-3: #7f7f7f;
+$neutral-color-4: #595959;
+$neutral-color-5: #343434;
+$neutral-color-6: #0f0f0f;
 
-$primary-color: #efefef;
+$bg-color-1: $neutral-color-6;
+$bg-color-2: #0268bb;
+$bg-color-3: #2f2f2f;
+
+$primary-color: $neutral-color-0;
+$secondary-color: #FA538D;
 
 $font-1: 'Roboto', sans-serif;
-$font-2: "IBM Plex Mono", monospace;
+$font-2: 'Inconsolata', monospace;
 
-$neutral-color-6: #0f0f0f;
-$neutral-color-5: #2f2f2f;
-$neutral-color-4: #4f4f4f;
-$neutral-color-3: #6f6f6f;
-$neutral-color-2: #9f9f9f;
-$neutral-color-1: #cfcfcf;
