--- a/src/sass/components/greeting.scss
+++ b/src/sass/components/greeting.scss
@@ -9,7 +9,6 @@ $greeting-padding: 5vw;
   background: url("../../public/sky.jpg") no-repeat fixed right center;
   background-size: cover;
   padding: $greeting-padding;
-  font-family: $font-2;
   &-content {
     @include f-col;
     justify-content: center;
@@ -18,14 +17,14 @@ $greeting-padding: 5vw;
     min-height: calc($greeting-height - $greeting-padding * 2);
     width: 100%;
     padding: 1rem;
-    background: #00000077;
+    background: #00000080;
     &-text {
       @include f-col;
-      // text-align: center;
       gap: 0.8rem;
       &-heading {
-        font-size: 1.6rem;
-        #text-cursor {
+        font-family: $font-2;
+        font-size: 1.8rem;
+        &-text-cursor {
           display: inline-block;
           height: 1em;
           width: 0.05em;
@@ -35,9 +34,19 @@ $greeting-padding: 5vw;
       }
     }
     &-fig {
-      height: 18rem;
+      height: 15rem;
       max-width: 100%;
       object-fit: scale-down;
+    }
+    @media screen and (min-width: 768px) {
+      flex-direction: row;
+      &-text {
+        height: inherit;
+        justify-content: center;
+        &-heading {
+          font-size: 2.5rem;
+        }
+      }
     }
   }
 }
@@ -49,18 +58,5 @@ $greeting-padding: 5vw;
 @keyframes blinker {
   50% {
     background-color: #ffffee00;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  #greeting-content {
-    flex-direction: row;
-    &-text {
-      height: inherit;
-      justify-content: center;
-      &-heading {
-        font-size: 2.5rem;
-      }
-    }
   }
 }
