Addition projects.ejs

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -17,7 +17,8 @@
   <%- include("./components/page-header") %>
     <main>
       <%- include("./components/greeting") %>
-        <%- include("./components/about") %>
+      <%- include("./components/about") %>
+      <%- include("./components/projects") %>
     </main>
 </body>
 
