--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -1,10 +1,7 @@
 @import "../variables";
 
 #about {
-  &-text {
-    padding: 2.5rem 0;
-    // font-family: $font-2;
-  }
+  margin: 1rem auto auto;
 }
 
 @import "skills";
