--- a/src/sass/components/page-header.scss
+++ b/src/sass/components/page-header.scss
@@ -5,7 +5,7 @@
   @include f-row;
   justify-content: space-between;
   align-items: center;
-  position: sticky;
+  // position: sticky;
   top: 0;
   width: 100%;
   height: $header-height;
