--- a/src/sass/elements/container.scss
+++ b/src/sass/elements/container.scss
@@ -1,11 +1,14 @@
 @import "../variables";
 
 .container {
-  padding: 2rem 0 0;
+  padding: 1.4rem 0;
   width: 90%;
   margin: auto;
   &-heading {
     font-family: $font-2;
+  }
+  &-text {
+    padding: 2.5rem 0;
   }
   @media screen and (min-width: 768px) {
     width: 80%;
