Addition social and footer

--- a/src/components/page-header.ejs
+++ b/src/components/page-header.ejs
@@ -20,7 +20,7 @@
         <a href="#projects">Projects</a>
       </li>
       <li>
-        <a href="#contact">Contact</a>
+        <a href="#social">Social</a>
       </li>
     </ul>
   </nav>
