--- a/src/components/projects.ejs
+++ b/src/components/projects.ejs
@@ -7,11 +7,10 @@
         alt="print screen of Qudratic Function Calculator">
       <div class="projects-div-inner">
         <h4 class="projects-div-inner-heading">Quadratic Function Calculator</h4>
-        <p>It is a personal project for a web quadratic function calculator. It uses Embedded JavaScript (EJS),
-          CSS, TypeScript, Babel, and Webpack.
+        <p>It is a personal project that uses Embedded JavaScript (EJS), CSS, TypeScript, Babel, and Webpack.
         </p>
-        <button class="btn projects-div-inner-btn"><a
-            href="https://amartinsmg.github.io/QuadraticFCalculator">Visit</a></button>
+        <a class="btn projects-div-inner-btn" target="_blank" href="https://github.com/amartinsmg/QuadraticFCalculator"
+          role="button"><i class="fab fa-github"></i> Complete project</a>
       </div>
     </div>
     <div class="projects-div" id="project-grid-2">
@@ -19,23 +18,23 @@
         alt="print screen of Qudratic Function Calculator">
       <div class="projects-div-inner">
         <h4 class="projects-div-inner-heading">Century Calculator</h4>
-        <p>It is a personal project for a web century calculator. It uses Embedded JavaScript (EJS),
-          CSS, Bootstrap 5, TypeScript, Babel, and Webpack.
+        <p>It is a personal project that uses Embedded JavaScript (EJS), CSS, Bootstrap 5, TypeScript,
+          Babel, and Webpack.
         </p>
-        <button class="btn projects-div-inner-btn"><a
-            href="https://amartinsmg.github.io/CenturyCalculator">Visit</a></button>
+        <a class="btn projects-div-inner-btn" target="_blank" href="https://github.com/amartinsmg/CenturyCalculator"
+          role="button"><i class="fab fa-github"></i> Complete project</a>
+        </div>
       </div>
-    </div>
-    <div class="projects-div" id="project-grid-3">
-      <img class="projects-div-img" src="../public/CNCalculator.jpg" id="project-grid-3-img"
+      <div class="projects-div" id="project-grid-3">
+        <img class="projects-div-img" src="../public/CNCalculator.jpg" id="project-grid-3-img"
         alt="print screen of Qudratic Function Calculator">
-      <div class="projects-div-inner">
-        <h4 class="projects-div-inner-heading">Complex Numbers Calculator</h4>
-        <p>It is a personal project for a web complex numbers calculator. It uses HTML, CSS, Bootstrap,
-          TypeScript, Web Assembly, Babel, and Webpack.
-        </p>
-        <button class="btn projects-div-inner-btn"><a
-            href="https://amartinsmg.github.io/ComplexNumCalculator">Visit</a></button>
+        <div class="projects-div-inner">
+          <h4 class="projects-div-inner-heading">Complex Numbers Calculator</h4>
+          <p>It is a personal project that uses HTML, CSS, Bootstrap 5, TypeScript, Web Assembly, Babel,
+            and Webpack.
+          </p>
+          <a class="btn projects-div-inner-btn" target="_blank" href="https://github.com/amartinsmg/ComplexNumCalculator"
+            role="button"><i class="fab fa-github"></i> Complete project</a>
       </div>
     </div>
 </section>
