--- a/src/components/skills.ejs
+++ b/src/components/skills.ejs
@@ -1,5 +1,5 @@
 <div class="skills">
-  <h3 class="skills-heading container-heading">Main skills</h3>
+  <h3 class="skills-heading">Main skills</h3>
   <div class="skills-content">
     <input type="radio" class="skills-content-radio" name="skill" id="radio-html" checked>
     <input type="radio" class="skills-content-radio" name="skill" id="radio-css">
