--- a/src/index.ejs
+++ b/src/index.ejs
@@ -15,11 +15,13 @@
 
 <body>
   <%- include("./components/page-header") %>
-    <main>
-      <%- include("./components/greeting") %>
-      <%- include("./components/about") %>
-      <%- include("./components/projects") %>
-    </main>
+  <main>
+    <%- include("./components/greeting") %>
+    <%- include("./components/about") %>
+    <%- include("./components/projects") %>
+    <%- include("./components/social") %>
+  </main>
+  <%- include("./components/page-footer") %>
 </body>
 
 </html>
