--- a/src/sass/components/projects.scss
+++ b/src/sass/components/projects.scss
@@ -11,7 +11,7 @@
   &-grid {
     @include f-col;
     align-items: center;
-    gap: 1.5rem;
+    gap: 2rem;
     .projects-div {
       width: 18rem;
       max-width: 100%;
@@ -26,8 +26,11 @@
         }
         &-btn {
           width: fit-content;
-          font-family: $font-2;
-          background-color: $neutral-color-2;
+          background-color: $bg-color-4;
+          color: $primary-color;
+          &:hover {
+            background-color: $bg-color-5;
+          }
         }
       }
       @media (pointer: fine) {
@@ -43,14 +46,15 @@
           object-fit: cover;
         }
         &-inner {
-          display: none;
           position: absolute;
-          width: 80%;
-          height: 80%;
-          top: 10%;
-          right: 10%;
-          background-color: #000000dd;
+          width: 86%;
+          height: 86%;
+          top: 7%;
+          right: 7%;
           padding: 5%;
+          gap: 1.3rem;
+          text-align: center;
+          background-color: #000000dd;
         }
       }
     }
@@ -58,6 +62,7 @@
   @media screen and (min-width: 1024px) {
     &-grid {
       display: grid;
+      gap: 1.5rem;
       justify-content: center;
       grid-template: 1fr 1fr / 1fr 1fr;
     }  
