--- a/src/sass/elements/btn.scss
+++ b/src/sass/elements/btn.scss
@@ -2,6 +2,5 @@
   padding: 0.2em 0.5em;
   border: none;
   border-radius: 0.1em;
-  font-family: inherit;
-  font-size: inherit;
+  font: inherit;
 }
