--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,8 +8,8 @@
 }
 
 html, body {
+  font: $font-1;
   font-size: 20px;
-  font-family: $font-1;
   color: $primary-color;
   background-color: $bg-color-1;
 }
@@ -17,8 +17,11 @@ html, body {
 @import "elements/a";
 @import "elements/btn";
 @import "elements/container";
+@import "elements/display-none";
 
 @import "components/page-header";
 @import "components/greeting";
 @import "components/about";
 @import "components/projects";
+@import "components/social";
+@import "components/page-footer";
